No config for tests